# odp-releaser

./: .copier-answers.yml  .pre-commit-config.yaml  .readthedocs.yaml  README.md  noxfile.py  pyproject.toml  zensical.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/actions/: install.yml
.github/actions/bump_images/: action.yml
.github/actions/install/: action.yml
.github/actions/report_deployment/: action.yml
.github/workflows/: bump-images.yml  cd.yml  ci.yml  docs.yml  notify.yml  report-merged.yml
docs/: actions.md  cli.md  client_payload.md  dump_event.md  github_apps.md  image_manifest_config.md  workflows.md
docs/config/: deploy_targets.md  image_manifest.md
src/odp_releaser/: __init__.py  bump_image_tester.py  bump_images.py  cli_options.py  comment_on_pr.py  generate_config.py  github.py  github_output.py  logger.py  main.py  make_payload.py  notify.py  report_deployment.py  report_metadata.py  yamlpath_logger.py
src/odp_releaser/client_payload/: push.json  release.json  workflow_dispatch.json
src/odp_releaser/manifests/: file.py  helm.py  helpers.py  kustomize.py
src/odp_releaser/schemas/: client_payload.py  dispatch.py  example_yaml.py  github_context.py  manifest_config.py
tests/: conftest.py  test_bump_image.py  test_cli.py  test_e2e_fixtures.py  test_file_manifest.py  test_generate_deploy_targets.py  test_github.py  test_github_context.py  test_github_output.py  test_helm.py  test_kustomize.py  test_make_payload.py  test_manifest_config.py  test_notify.py  test_package.py  test_report_deployment.py  test_report_metadata.py  test_yamlpath_logger.py
tests/e2e/: deploy_targets.yaml  image_manifest.yaml
tests/e2e/manifests/: commit.kustomization.yaml  pr.kustomization.yaml
tests/event_data/pr_push/: event.json  github-context.json  pr-merge.json
tests/event_data/push_pr_merge/: event.json  github-context.json  pr-merge.json
tests/event_data/release/: event.json
tests/event_data/workflow_dispatch/: event.json
tests/manifests/dagster_helm_kustomize/: image_manifest.yaml  kustomization.yaml  values.yaml
tests/manifests/file/: deployment.json  deployment.yaml
tests/manifests/key_error/: image_manifest.yaml  kustomization.yaml
tests/manifests/push/: image_manifest.yaml  mariners-dev.kustomization.yaml
