[build-system]
requires = ["uv_build>=0.7.19,<0.12"]
build-backend = "uv_build"


[project]
name = "odp-releaser"
version = "0.1.0"
authors = [
  { name = "Alex Kerney", email = "akerney@gmri.org" },
]
description = "Tooling to help manage releasing Docker images across repos"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
    "githubkit[auth-app]>=0.16.0",
    "typer>=0.26.8",
    "yamlpath>=3.9.1",
]

[project.scripts]
odp-releaser = "odp_releaser.main:app"

[project.urls]
Homepage = "https://github.com/gulfofmaine/odp-releaser"
"Bug Tracker" = "https://github.com/gulfofmaine/odp-releaser/issues"
Discussions = "https://github.com/gulfofmaine/odp-releaser/discussions"
Changelog = "https://github.com/gulfofmaine/odp-releaser/releases"


[dependency-groups]
test = [
  "inline-snapshot>=0.34.2",
  "pytest >=9",
  "pytest-cov >=7",
  "respx>=0.23.1",
]
dev = [
  { include-group = "test" },
  { include-group = "docs" }
]
docs = [
    "griffe-pydantic>=1.3.1",
    "markdown-exec[ansi]>=1.12.1",
    "mkdocs-typer2[zensical]>=0.4.1",
    "mkdocstrings[python]>=1.0.4",
    "zensical>=0.0.20",
]


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals", "-v"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["odp_releaser"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "odp_releaser.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["yamlpath.*"]
ignore_missing_imports = true


[tool.ruff]
show-fixes = true

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["odp_releaser._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
# Typer resolves these Annotated option aliases at runtime (via
# inspect.signature(eval_str=True)), so they must stay imported at module
# scope and cannot move into a type-checking block.
"src/odp_releaser/make_payload.py" = ["TC001"]
"src/odp_releaser/notify.py" = ["TC001"]


[tool.pylint]
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]

[tool.uv]
exclude-newer = "1 week"
